# fashion-search-engine

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
docker/: Dockerfile  docker-compose.yml
frontend/static/css/: styles.css
frontend/templates/: base.html  index.html
frontend/templates/partials/: query_panel.html  results.html
scripts/: db_init.sh
scripts/app/: start.sh
scripts/database/: connect.sh  dump.sh  start.sh
scripts/ngrok/: start.sh
scripts/render/: setup.sh
scripts/repo/: freeze.sh
src/: config.py
src/agents/: extractor.py
src/app/: main.py
src/database/: manager.py  schemas.py
src/embedding/: clip.py  color.py  colors.py  items.py  main.py  st.py
src/lambda/: run.sh
src/orchestrator/: main.py
src/scraper/: main.py
src/search/: engine.py  filters.py  main.py  pipeline.py  query.py
temp/: gallery.html  index.html
